// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "height": 200,
      "paddingHorizontal": 30,
      "paddingVertical": 20,
    }
  }
>
  <Text
    style={
      Object {
        "fontSize": 36.5,
      }
    }
  >
    Joey's Alice lake lap
  </Text>
</View>
`;

exports[`renders correctly with style 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "color": "#fff",
      "height": 200,
      "paddingHorizontal": 30,
      "paddingVertical": 20,
    }
  }
>
  <Text
    style={
      Object {
        "backgroundColor": "black",
        "color": "#fff",
        "fontSize": 36.5,
      }
    }
  >
    Joey's Alice lake lap
  </Text>
</View>
`;
